# dataops_pipeline

./: .env.airflow  .gitignore  README.md  main.py  pyproject.toml  setup_airflow.sh  setup_vm_airflow.sh
airflow_home/: airflow.cfg  airflow.db
dags/: dag_daily_fetch_transactions.py  dag_daily_monitoring.py  dag_daily_prediction.py  dag_monitor_and_train.py  dag_retrain_and_select_model.py  outils.py
data/raw_predict/: raw_input_20250707.csv
docs/: airflow.md  airflow_setup.md  bigquery_setup.md  dags.md  discord.md  drift_testing.md  instructions.md  todo_architecture.md
shared_data/: evidently_drift_report.html
src/: compare_raw_csv.py  fetch_raw_sample.py
